# assignments

./: .gitignore
HENNGE_JP/: submit_solution.py  test_1.py  test_gpt.py  test_gpt_str.py  totp_otp.py
HENNGE_JP/coverletter/: coverletter.txt  points_to_cover.txt
HENNGE_JP/next_attempt/: main.py  mission_3.py
bolna_ai/: .env.example  .gitignore  AGENTS.md  CONTEXT.md  PRD.md  README.md  pyproject.toml
bolna_ai/app/: bolna.py  config.py  logging_utils.py  main.py  models.py  registry.py  service.py  slack.py
bolna_ai/examples/: bolna-completed-webhook.json  bolna-completed-without-transcript.json
bolna_ai/plans/: bolna-slack-alert-integration.md
bolna_ai/tests/: test_config.py  test_http.py  test_registry.py  test_service.py
