[project]
name = "bolna-slack-alert-integration"
version = "0.1.0"
description = "FastAPI service that posts Slack alerts when Bolna calls complete."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.6.0",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
